--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "build:azure": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
